# FinalProject

./: .gitignore  CMakeLists.txt  database.h  master_levels.c  master_modules.c  master_modules.h  master_status_events.c  modules_db.c  shared.c  shared.h
agregations/: agregation_func.c  agregation_func.h
core/: global_var.c  global_var.h
core/crud/: create_table.c  create_table.h  delete.c  delete.h  insert.c  insert.h  select.c  select.h  update.c  update.h
core/db_manipulation/: db_helper.c  db_helper.h  db_man.c  db_man.h
core/table_struct/: field_struct.h  table_struct.h
crud/: shared.c  shared.h
database/: list.db
masters/: master_levels.c  master_levels.h  master_modules.c  master_status_events.h
materials/: master_levels.db
size_file/: size.c  size.h
struct/: levels.h  modules.h  status_events.h
table/: madi  niggers  test
